# ai-devsecops

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dtrack.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: harness.md
.github/workflows/: build-dast.yml  ci.yml  security-gate.yml
assets/: demo.cast
controls/: compliance-mappings.yaml  tier-mappings.yaml
controls/baselines/: asvs-4.0.3-L3.yaml  asvs-5.0-L3.yaml  fisc-safety.yaml  pci-dss-4.0.yaml
dashboard/: app.js  index.html  styles.css
docs/: ADR.md  ARCHITECTURE.md  PRD.md  architecture-design.md
examples/cloudgoat-scan/: README.md  evidence-report.json  sbom.cdx.json
infra/: cloudfront.tf  dtrack.tf  iam.tf  main.tf  outputs.tf  route53.tf  s3.tf
orchestrator/: __main__.py  cli.py  demo.py  types.py
orchestrator/assessor/: bedrock.py  bedrock_client.py  interface.py  prompts.py  static.py
orchestrator/config/: manifest.py  profile.py
orchestrator/controls/: __init__.py  baseline.py  models.py  repository.py
orchestrator/evidence/: export.py  jsonl.py
orchestrator/exporters/: __init__.py  dashboard.py
orchestrator/gate/: combined.py  opa.py  threshold.py
orchestrator/importer/: __init__.py  baseline.py  generic.py  oscal.py  suggest.py
orchestrator/integrations/: defectdojo.py
orchestrator/intelligence/: enricher.py  epss.py  models.py  threat_model.py
orchestrator/resilience/: __init__.py  failure.py  override.py  retry.py
phases/: index.json
scripts/: execute.py  test_bedrock.py
tests/: conftest.py
(+161 files in other folders)
